# JoshuaTerminal

./: .env.example  .gitignore  CONTEXT.md  Indicators.md  Joshua_Terminal_Guide.docx  LICENSE  README.md  SETUP.md  app.py  com.joshuaterminal.app.plist.example  data_source.py  manifest.json  mt5_bridge.py  pyproject.toml  requirements.txt  service_worker.js  snapshot_routes.py  snapshot_state.json
static/css/: style.css
static/js/: alert_engine.js  app.js  indicators.js  pane.js  state_store.js
templates/: index.html  pine-converter.html  popout.html  snapshot.html
